[project]
name = "auto-budget-summarizer"
version = "0.1.0"
description = ""
authors = [{ name = "Koki Shinjo", email = "sktometometo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pywin32 (>=309,<310)", "matplotlib"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
